# lab08

./: .dockerignore  .gitignore  CMakeLists.txt  ChangeLog.md  Dockerfile  README.md
.github/workflows/: build.yml
_build/: Makefile  check  install_manifest.txt
_build/formatter_ex_lib/: Makefile
_build/formatter_lib/: Makefile
_build/hello_world_application/: Makefile
_build/solver_application/: Makefile
_build/solver_lib/: Makefile
formatter_ex_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt  hello_world.cpp
logs/: log.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
tests/: test1.cpp
